force-app/main/default/objects/Contract_Clause__c/Contract_Clause__c.object-meta.xml
<CustomObject>
    <label>Contract Clause</label>
    <nameField>
        <label>Contract Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>