force-app/main/default/objects/Contract_Clause__c/fields/Clause_Text__c.field-meta.xml
<CustomField>
    <fullName>Clause_Text__c</fullName>
    <label>Clause_Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>