force-app/main/default/objects/Contract_Clause__c/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Mandatory</label>
    <type>Checkbox</type>
</CustomField>